# iterseg

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: test-and-deploy.yml  test_and_deploy.yml
None/: 0.0.0.0  1.0.0.0  2.0.0.0
docs/: conf.py  index.rst
docs/docs/: conf.py  index.rst
docs/docs/_build/doctrees/: environment.pickle  index.doctree
docs/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/: add_noise.py  assess_noisy.py  assess_seg.py  check_load_working.py  check_predict_working.py  check_train_working.py  check_working copy.py  check_working.py  check_working_full.py  collate_noise_series.py  load_for_metrics.py  predict_from_path.py  segment_noisy.py  train_unet.py
examples/config_files/: Segmentation_config.md  affinity-unet-watershed-config.json
examples/possible_environments/: environment.yml
iterseg/: _dock_widget.py  metrics.py  predict.py  training_experiments.py  unet.py  watershed.py
src/iterseg/: __init__.py  _dock_widgets.py  _io.py  _predict_dock_widget.py  _train_from_napari.py  augment.py  custom_loss.py  helpers.py  labels.py  metrics.py  napari.yaml  plots.py  predict.py  segmentation.py  train.py  train_io.py  training_experiments.py  unet.py  watershed.py
src/iterseg/_tests/: test_assess_seg.py  test_dock_widget.py  test_function.py  test_get_train_data.py  test_load_data.py  test_predict_dock_widget.py  test_reader.py  test_train_unet.py  test_writer.py
src/iterseg/data/example-segmentation.zarr/: .zarray  (+3 more)
(+461 files in other folders)
