[metadata]
name = iterseg
version = 0.0.1
author = Abigail S McGovern & Juan Nunez-Iglesias
author_email = Abigail.McGovern1@monash.edu
url = https://github.com/abigailmcgovern/iterseg
license = BSD-3-Clause
description = napari plugin for iteratively improving unet-watershed segmentation
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
project_urls = 
	Bug Tracker = https://github.com/abigailmcgovern/iterseg/issues
	Documentation = https://github.com/abigailmcgovern/iterseg#README.md
	Source Code = https://github.com/abigailmcgovern/iterseg
	User Support = https://github.com/abigailmcgovern/iterseg/issues

[options]
packages = find:
python_requires = >=3.7
package_dir = 
	=src
# add your package requirements here
install_requires = 
	napari-plugin-engine>=0.1.4
	numpy
	dask
	torch
	scikit-image
	pandas
	zarr
	zarpaint
	matplotlib
	ptitprince
	platelet-unet-watershed
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
napari.manifest = 
	iterseg = iterseg:napari.yaml

[options.package_data]
iterseg = napari.yaml

